--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
 #container {
     display: grid;
+    height: 500px;
+    width: 500px;
+    grid-template-columns: repeat(16, 1fr);
+}
+
+.grid {
+    border-color: black;
+    border-width: 1px;
 }
