--- a/style.css
+++ b/style.css
@@ -3,9 +3,11 @@
     height: 500px;
     width: 500px;
     grid-template-columns: repeat(16, 1fr);
+    border-style: solid;
+    border-width: 3px;
 }
 
 .grid {
-    border-color: black;
+    border-style: dotted;
     border-width: 1px;
 }
